fix gap footer icons

--- a/css/01_joseph_gapuz_portfolio_styled/styles.css
+++ b/css/01_joseph_gapuz_portfolio_styled/styles.css
@@ -33,7 +33,7 @@ h1, h2 {
     align-items: center;
 }
 
-nav {
+nav, .icons {
     display: flex;
     justify-content: center;
     gap: 20px;
